NFT preview card component

--- a/NFT preview card component/nft-preview-card-component-main/NFT.css
+++ b/NFT preview card component/nft-preview-card-component-main/NFT.css
@@ -129,6 +129,12 @@
     cursor: pointer;
 }
 
+#btnJW:hover
+{
+    color: hsl(178, 100%, 50%);
+    cursor: pointer;
+}
+
 .ImageContainer::before
 {
     position: absolute;
