--- a/Order summary component/order-summary-component-main/Style.css
+++ b/Order summary component/order-summary-component-main/Style.css
@@ -35,10 +35,13 @@
 
 .Fond
 {
-    background-image: url(images/pattern-background-desktop.svg);
+    background: url(images/pattern-background-desktop.svg) no-repeat top center;
+    background-size: contain;
+    background-color: #e0e8ff;
     min-height: 100vh;
     margin: 0;
     padding: 0;
+    justify-content: center;
 }
 
 .Card
@@ -46,7 +49,6 @@
     width: 350px;
 
     background-color: white;
-    margin: auto;
     border-radius: 10px;
 
     display: flex;
