--- a/Order summary component/order-summary-component-main/Style.css
+++ b/Order summary component/order-summary-component-main/Style.css
@@ -41,12 +41,16 @@
     min-height: 100vh;
     margin: 0;
     padding: 0;
+
+    display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .Card
 {
-    width: 350px;
+    width: 400px;
 
     background-color: white;
     margin: auto;
@@ -72,9 +76,9 @@
     height: 40px;
     background-color: hsl(245, 75%, 52%);
     color: white;
-    margin: 8% 0;
+    margin: 8% 0 5% 0;
     border: none;
-    box-shadow: 1px 10px 15px grey;
+    box-shadow: 1px 10px 20px hsl(244.9, 64.2%, 62.7%);
 
     font-family: RedHatDisplay;
     font-weight: 700;
@@ -84,6 +88,7 @@
 {
     cursor: pointer;
     opacity: 0.7;
+    transition: 0.3s;
 }
 
 .CadrePetit
@@ -103,6 +108,7 @@
 
 h1
 {
+    font-size: 24px;
     font-family: RedHatDisplay;
     font-weight: 900;
 }
@@ -112,6 +118,17 @@ h1
     font-size: 15px;
     font-family: RedHatDisplay;
     font-weight: 500;
+    padding: 0 20px;
+    line-height: 1.7;
+    color: hsl(224, 23%, 55%)
+}
+
+.Prix
+{
+    font-size: 15px;
+    font-family: RedHatDisplay;
+    font-weight: 500;
+    color: hsl(224, 23%, 55%)
 }
 
 .Ecart
@@ -125,17 +142,21 @@ h1
 }
 
 
-.PointeurTexte
+.TexteChange
 {
     color: hsl(245, 75%, 52%);;
     text-decoration: underline;
+    font-weight: 700;
+    font-family: RedHatDisplay;
+    font-size: 14px;
 }
 
-.PointeurTexte:hover
+.TexteChange:hover
 {
     opacity: 0.7;
     text-decoration: none;
     cursor: pointer;
+    transition: 0.3s;
 }
 
 .TexteCancel
@@ -143,13 +164,15 @@ h1
     font-size: 15px;
     font-family: RedHatDisplay;
     font-weight: 700;
-    color: hsl(224, 23%, 55%)
+    color: hsl(224, 23%, 55%);
+    margin-top: 0;
 }
 
 .TexteCancel:hover
 {
     color: black;
     cursor: pointer;
+    transition: 0.3s;
 }
 
 .TexteGras
